Subindo projeto pré concluido - V1

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,18 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+/.vs/INDT.Viagens/copilot-chat/ce56d199/sessions
+/.vs/INDT.Viagens/CopilotIndices/17.14.794.21998
+/.vs/INDT.Viagens/DesignTimeBuild
+/.vs/INDT.Viagens/FileContentIndex
+/.vs/INDT.Viagens/v17
+/.vs/INDT_Prova/CopilotIndices/17.14.794.21998
+/.vs/INDT_Prova/FileContentIndex
+/.vs/INDT_Prova/v17/TestStore/0
+/.vs/INDT_Prova/v17
+/.vs/INDT_Viagens/CopilotIndices/17.14.794.21998
+/.vs/INDT_Viagens/FileContentIndex
+/.vs/INDT_Viagens/DesignTimeBuild
+/.vs/ProjectEvaluation
+/.vs/slnx.sqlite
+/.vs/VSWorkspaceState.json
